# missile-tid

./: .coveragerc  .flake8  .gitignore  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  example.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_cli.py  setup.py
.github/workflows/: black.yml  flake8.yml  mypy.yml  pylint.yml  testing.yml
config/: configuration.yml.example  list_of_100_stations.txt  list_of_stations.txt
data/: nti-dprk-iran-launches.csv
demos/: live.py  vandenberg.py
doc/: thin-plate-splien-brief-docs.docx
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  installation.rst  reference.rst  usage.rst
notebooks/: launchtector.ipynb
pytid/: README.md  ambiguity_correct.py  ambiguity_correct_graveyard.py  ambiguity_correct_rho.py  ambiguity_correct_swap_fix.py  bias_solve.py  calibrate.py  connections.py  get_data.py  sample.py  setup.py  station_plotter.py  tec.py  test.py  test2.py  tropo.py
pytid/gnss/: ambiguity_correct.py  bias_solve.py  connections.py  get_data.py  minimize.c  parse_truth.py  plot.py  stations.pickle  tec.py
pytid/graveyard/: ambiguity_correct_again.py  tropo.py
pytid/utils/: configuration.py  io.py  thin_plate_spline.py
scripts/: bash_cors_obs_download.sh
tid/: _errors.py  awkward.py  bias_solve.py  config.py  connections.py  dense_data.py  get_data.py  plot.py  scenario.py  serialize.py  tec.py  types.py  util.py
tid/lookup_tables/: station_locations.json  station_networks.json
tid/tests/: test_bias_solve.py  test_utils.py
