[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tid"
version = "0.1.0"
description = "Ionospheric measurements from GPS to detect launches."
authors = [
    {name = "Tyler Nighswander"},
    {name = "Michael Nute"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "atomicwrites",
    "awkward",
    "cartopy",
    "georinex",
    "hatanaka",
    "h5py",
    "laika@git+https://github.com/commaai/laika#egg=laika",
    "matplotlib",
    "numpy",
    "pyyaml",
    "ruptures",
    "scipy",
    "sympy",
    "xarray"
]

[project.urls]
repository = "https://github.com/tylerni7/missile-tid"

[tool.setuptools.packages.find]
exclude = ["docs", "tests"]
namespaces = false  # true by default

[tool.mypy]
python_version = "3.8"

[[tool.mypy.overrides]]
module = [
    "awkward",
    "cartopy",
    "cartopy.feature",
    "georinex",
    "hatanaka",
    "h5py",
    "laika",
    "laika.*",
    "matplotlib",
    "pytest",
    "ruptures",
    "setuptools",
    "scipy",
    "scipy.signal",
    "xarray",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["tid"]

[tool.coverage.report]
omit = [
    "*/python?.?/*",
    "*/site-packages/nose/*",
    # ignore _version.py and versioneer.py
    ".*version.*",
    "*_version.py"
]
exclude_lines = [
    "if __name__ == '__main__':"
]
